trunk/extension/admin2pp/design/admin2/stylesheets/admin2pp.css
/**
 * $Id$
 * $HeadURL$
 */

/* datepicker for ezdate and ezdatetime */
div.date button
{
color: #fff;
background: #D1DFE9 url(../images/h-sprite-43.png) repeat-x left -31px;/*url(../../images/2/gradient-blue.png) repeat-x center bottom scroll;*/
border: 1px solid #dedede;
border-color: #aaa #ccc #ccc #aaa;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
border-radius: 3px;
margin:0 0 0 10px;
}

.ui-widget
{
font-size:0.9em;
}

/* AJAX preview */
#preview-dialog p.loader
{
padding-top:10%;
text-align:center;
}
#preview-dialog label, #preview-dialog h6
{
font-weight:bold;
font-size:1.1em;
background:#F5F5F5;
color:#222;
padding:3px 0;
margin-bottom:4px;
}
a.admin2pp-action
{
float:left;
}
#ui-dialog-title-preview-dialog
{
padding-left:1em;
}
/* dashboard blocks */
.ui-sortable-placeholder
{
border: 1px dotted black;
visibility: visible !important;
height: 50px !important;
}
.ui-sortable-placeholder *
{
visibility: hidden;
}

.dashboard-item
{
padding:0.2em;
}
.dashboard-item h2
{
margin-top:0;
padding:3px 5px;
cursor:move;
}
.dashboard-item table
{
margin:1em 4px 4px 4px;
width:auto;
}
.dashboard-item p
{
margin:0.5em;
}
.dashboard-item h2
{
font-size:1.3em;
}
.content-dashboard .left, .content-dashboard .right
{
min-height:50px;
padding-bottom:20px;
}
a.ui-dialog-titlebar-wrench,
a.ui-dialog-titlebar-refresh,
a.ui-dialog-titlebar-close
{
float:right;
}

/* dashboard settings */
ul.settings-dashboard
{
list-style-type:none;
}
ul.settings-dashboard label
{
display:inline;
}
#admin2pp_all_choosen
{
width:80%;
margin:10px auto;
}
.settings-dashboard li.active
{
display:none;
}
#admin2pp-db-window p.button-bar
{
margin-top:20px;
}

/* advanced search dashboard block */
.dashboard-advanced-search
{
margin-top:1em;
padding:5px;
}
.dashboard-item .semi
{
float:left;
width:49%;
}
.dashboard-item .semi
{
padding-bottom:5px;
}
.dashboard-item .inactive label
{
color:#888;
}
.dashboard-item .semi input
{
width:90%;
border: 1px solid #666;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
border-radius: 3px;
line-height: 18px !important;
}
.dashboard-advanced-search .button-bar
{
text-align:center;
}
/* feed reader dashboard block */
div.feed-reader-result h3
{
margin: 0.2em 0 0 1em;
}
p.waiting
{
text-align:center;
font-style:italic;
}
p.waiting img
{
display:block;
margin:10px auto;
}

/* right menu AJAX loading */
#rightmenu.loading
{
background:url(../images/admin2pp-loader-right-menu.gif) no-repeat center 4em;
height:120px;
}

/* drag n drop */
tr.ui-state-highlight td
{
border-top:1px solid #e9c22b;
border-bottom:1px solid #e9c22b;
}
/* system infos dashboard block */
#admin2pp-sysinfo pre
{
padding:4px;
overflow:auto;
}
#admin2pp-sysinfo dd
{
margin:0 0.5em 0.5em 0.5em;
}
#admin2pp_db_sysinfo p.waiting
{
display:none;
}
/* resizable object info */
.ui-resizable-s
{
height:7px;
background:#f8f8f8 url(../images/v-sprite-43.png) no-repeat center -176px;
bottom:-4px;
}
.ui-resizable-s:hover
{
background:#eaeaea url(../images/v-sprite-43.png) no-repeat center -184px;
}
.box-content
{
padding-bottom:3px;
}
.controlbar div.button-left, .controlbar div.button-right
{
margin-top:4px;
}
p.versions
{
border-top:1px solid #ccc;
}

